[gd_scene load_steps=2 format=3 uid="uid://cj42q3cl3qhmm"]

[ext_resource type="Script" path="res://Scenes/Enemies/bosses/boss_body.gd" id="1_ofgdk"]

[node name="BossBody" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 57
script = ExtResource("1_ofgdk")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="EnemyWeapon" type="Node2D" parent="."]

[node name="WeaponMounts" type="Node2D" parent="EnemyWeapon"]

[node name="WeaponMount" type="Marker2D" parent="EnemyWeapon/WeaponMounts"]

[node name="Timers" type="Node2D" parent="."]

[node name="InvulnerableTimer" type="Timer" parent="Timers"]

[node name="WeaponTimer" type="Timer" parent="Timers"]

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]

[connection signal="timeout" from="Timers/InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
[connection signal="timeout" from="Timers/WeaponTimer" to="." method="_on_weapon_timer_timeout"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
